# topic_modeling

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  data.html  index.html  mkdocs.yml  model.html  objects.inv  pyproject.toml
.github/workflows/: ci.yml
docs/: data.md  index.md  model.md
notebooks/: topic_modeling_main.ipynb
search/: search_index.js  search_index.json
src/: __about__.py
src/data/: etl.py
src/model/: markovchain.py  nlp.py
stylesheets/: extra.css
